tests/compile-fail/Rule_20_3.rs
"N/A"
//~^ ERROR expected item, found `"N/A"`